--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Maven
+target/
+dependency-reduced-pom.xml
+
+#Idea Files
+.idea
+*.iml
