--- a/netty-prometheus-metrics/pom.xml
+++ b/netty-prometheus-metrics/pom.xml
@@ -34,12 +34,12 @@
             <artifactId>netty-base</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient_common</artifactId>
+            <artifactId>simpleclient</artifactId>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
