--- a/netty-micrometer-metrics/pom.xml
+++ b/netty-micrometer-metrics/pom.xml
@@ -45,6 +45,10 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_httpserver</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
