--- a/netty-prometheus-metrics/pom.xml
+++ b/netty-prometheus-metrics/pom.xml
@@ -45,6 +45,10 @@
             <groupId>io.prometheus</groupId>
             <artifactId>simpleclient_httpserver</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_hotspot</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
